content/docs/9500_python-api/9000_versions/v0.2.1/splitgraph.mdx

import "@splitgraph/design/css/sphinxtheme.css";

export const meta = {
  title: "splitgraph package",
  id: "splitgraph package"
};

<div className=" rst-content"><nav className="toc"><ol className="toc-level toc-level-1"><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#module-contents">Module contents</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#subpackages">Subpackages</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#submodules">Submodules</a><ol className="toc-level toc-level-2"><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphexceptions-module">splitgraph.exceptions module</a></li><li className="toc-item toc-item-h1"><a className="toc-link toc-link-h1" href="#indices-and-tables">Indices and tables</a></li></ol></li></ol></nav><div className="section" id="module-splitgraph">
<span id="module-contents"></span><h2 id="module-contents">Module contents<a className="headerlink" href="#module-splitgraph" title="Permalink to this headline">¶</a></h2>
</div><div className="section" id="splitgraph-package">

<div className="section" id="subpackages">
<h2 id="subpackages">Subpackages<a className="headerlink" href="#subpackages" title="Permalink to this headline">¶</a></h2>
<div className="toctree-wrapper compound">
<ul>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.config/">splitgraph.config package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.argument_config">splitgraph.config.argument_config module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.config">splitgraph.config.config module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.config_file_config">splitgraph.config.config_file_config module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.default_config">splitgraph.config.default_config module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.environment_config">splitgraph.config.environment_config module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.keys">splitgraph.config.keys module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.system_config">splitgraph.config.system_config module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.core/">splitgraph.core package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.engine">splitgraph.core.engine module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.image">splitgraph.core.image module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.object_manager">splitgraph.core.object_manager module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.registry">splitgraph.core.registry module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.repository">splitgraph.core.repository module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.table">splitgraph.core.table module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.engine/">splitgraph.engine package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.engine/#subpackages">Subpackages</a><ul>
<li className="toctree-l3"><a className="reference internal" href="splitgraph.engine.postgres/">splitgraph.engine.postgres package</a><ul>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.engine.postgres/#submodules">Submodules</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.engine.postgres/#module-splitgraph.engine.postgres.engine">splitgraph.engine.postgres.engine module</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.engine.postgres/#module-splitgraph.engine.postgres">Module contents</a></li>
</ul>
</li>
</ul>
</li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.engine/#module-splitgraph.engine">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.hooks/">splitgraph.hooks package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#module-splitgraph.hooks.external_objects">splitgraph.hooks.external_objects module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#module-splitgraph.hooks.mount_handlers">splitgraph.hooks.mount_handlers module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#module-splitgraph.hooks.s3">splitgraph.hooks.s3 module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#module-splitgraph.hooks.splitfile_commands">splitgraph.hooks.splitfile_commands module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#module-splitgraph.hooks">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.splitfile/">splitgraph.splitfile package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.splitfile/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.splitfile/#module-splitgraph.splitfile.execution">splitgraph.splitfile.execution module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.splitfile/#module-splitgraph.splitfile">Module contents</a></li>
</ul>
</li>
</ul>
</div>
</div>
<div className="section" id="submodules">
<h2 id="submodules">Submodules<a className="headerlink" href="#submodules" title="Permalink to this headline">¶</a></h2>
</div>
<div className="section" id="module-splitgraph.exceptions">
<span id="splitgraph-exceptions-module"></span><h2 id="splitgraphexceptions-module">splitgraph.exceptions module<a className="headerlink" href="#module-splitgraph.exceptions" title="Permalink to this headline">¶</a></h2>
<p>Exceptions that can be raised by the Splitgraph library.</p>
<dl className="py exception">
<dt id="splitgraph.exceptions.APICompatibilityError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">APICompatibilityError</code><a className="headerlink" href="#splitgraph.exceptions.APICompatibilityError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Exceptions related to API incompatibilities</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.AuthAPIError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">AuthAPIError</code><a className="headerlink" href="#splitgraph.exceptions.AuthAPIError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Exceptions raised by the Auth API</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.CheckoutError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">CheckoutError</code><a className="headerlink" href="#splitgraph.exceptions.CheckoutError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Errors related to checking out/committing repositories</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.DockerUnavailableError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">DockerUnavailableError</code><a className="headerlink" href="#splitgraph.exceptions.DockerUnavailableError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Could not connect to the Docker daemon.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.EngineInitializationError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">EngineInitializationError</code><a className="headerlink" href="#splitgraph.exceptions.EngineInitializationError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Raised when the engine isn’t initialized (no splitgraph_meta schema or audit triggers)</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.ExternalHandlerError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">ExternalHandlerError</code><a className="headerlink" href="#splitgraph.exceptions.ExternalHandlerError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Exceptions raised by external object handlers.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.GQLAPIError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">GQLAPIError</code><a className="headerlink" href="#splitgraph.exceptions.GQLAPIError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>GQL API errors</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.GQLRepoDoesntExistError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">GQLRepoDoesntExistError</code><a className="headerlink" href="#splitgraph.exceptions.GQLRepoDoesntExistError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.GQLAPIError" title="splitgraph.exceptions.GQLAPIError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.GQLAPIError</span></code></a></p>
<p>Repository doesn’t exist</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.GQLUnauthenticatedError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">GQLUnauthenticatedError</code><a className="headerlink" href="#splitgraph.exceptions.GQLUnauthenticatedError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.GQLAPIError" title="splitgraph.exceptions.GQLAPIError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.GQLAPIError</span></code></a></p>
<p>Unauthenticated (user not logged in)</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.GQLUnauthorizedError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">GQLUnauthorizedError</code><a className="headerlink" href="#splitgraph.exceptions.GQLUnauthorizedError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.GQLAPIError" title="splitgraph.exceptions.GQLAPIError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.GQLAPIError</span></code></a></p>
<p>Unauthorized (e.g. repository isn’t writeable by the user)</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.ImageNotFoundError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">ImageNotFoundError</code><a className="headerlink" href="#splitgraph.exceptions.ImageNotFoundError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>A Splitgraph image doesn’t exist.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.IncompleteObjectDownloadError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">IncompleteObjectDownloadError</code><span className="sig-paren">(</span><em className="sig-param"><span className="n">reason</span><span className="p">:</span> <span className="n">Optional<span className="p">[</span>BaseException<span className="p">]</span></span></em>, <em className="sig-param"><span className="n">successful_objects</span><span className="p">:</span> <span className="n">List<span className="p">[</span>str<span className="p">]</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.exceptions.IncompleteObjectDownloadError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Raised when an error is encountered during download of multiple objects.
The handler is supposed to perform any necessary
cleanup and reraise <cite>reason</cite> at the earliest opportunity.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.IncompleteObjectUploadError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">IncompleteObjectUploadError</code><span className="sig-paren">(</span><em className="sig-param"><span className="n">reason</span><span className="p">:</span> <span className="n">Optional<span className="p">[</span>BaseException<span className="p">]</span></span></em>, <em className="sig-param"><span className="n">successful_objects</span><span className="p">:</span> <span className="n">List<span className="p">[</span>str<span className="p">]</span></span></em>, <em className="sig-param"><span className="n">successful_object_urls</span><span className="p">:</span> <span className="n">List<span className="p">[</span>str<span className="p">]</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.exceptions.IncompleteObjectUploadError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Raised when an error is encountered during upload of multiple objects.
The handler is supposed to perform any necessary
cleanup and reraise <cite>reason</cite> at the earliest opportunity.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.MountHandlerError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">MountHandlerError</code><a className="headerlink" href="#splitgraph.exceptions.MountHandlerError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Exceptions raised by mount handlers.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.ObjectCacheError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">ObjectCacheError</code><a className="headerlink" href="#splitgraph.exceptions.ObjectCacheError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Issues with the object cache (not enough space)</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.ObjectIndexingError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">ObjectIndexingError</code><a className="headerlink" href="#splitgraph.exceptions.ObjectIndexingError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Errors related to indexing objects</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.ObjectMountingError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">ObjectMountingError</code><a className="headerlink" href="#splitgraph.exceptions.ObjectMountingError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Errors related to incompatible objects.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.ObjectNotFoundError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">ObjectNotFoundError</code><a className="headerlink" href="#splitgraph.exceptions.ObjectNotFoundError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Raised when a physical object doesn’t exist in the cache.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.RepositoryNotFoundError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">RepositoryNotFoundError</code><a className="headerlink" href="#splitgraph.exceptions.RepositoryNotFoundError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>A Splitgraph repository doesn’t exist.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.SplitGraphError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">SplitGraphError</code><a className="headerlink" href="#splitgraph.exceptions.SplitGraphError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <code className="xref py py-class docutils literal notranslate"><span className="pre">Exception</span></code></p>
<p>A generic Splitgraph exception.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.SplitfileError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">SplitfileError</code><a className="headerlink" href="#splitgraph.exceptions.SplitfileError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Generic error class for Splitfile interpretation/execution errors.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.TableNotFoundError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">TableNotFoundError</code><a className="headerlink" href="#splitgraph.exceptions.TableNotFoundError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>A table doesn’t exist in an image</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.UnsupportedSQLError">
<em className="property">exception </em><code className="sig-prename descclassname">splitgraph.exceptions.</code><code className="sig-name descname">UnsupportedSQLError</code><a className="headerlink" href="#splitgraph.exceptions.UnsupportedSQLError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Raised for unsupported SQL statements, for example, containing schema-qualified tables when the statement
is supposed to be used in an SQL/IMPORT Splitfile command.</p>
</dd></dl>

</div>

</div>
<div className="section" id="indices-and-tables">
<h1 id="indices-and-tables">Indices and tables<a className="headerlink" href="#indices-and-tables" title="Permalink to this headline">¶</a></h1>
<ul className="simple">
<li><p><a className="reference internal" href="../genindex/"><span className="std std-ref">Index</span></a></p></li>
<li><p><a className="reference internal" href="../py-modindex/"><span className="std std-ref">Module Index</span></a></p></li>
<li><p><a className="reference internal" href="../search/"><span className="std std-ref">Search Page</span></a></p></li>
</ul>
</div>
</div>